--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,15 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MyApp: Indice</title>
-</head>
-<body>
-    <nav>
-        <a href="./detail">Detalle</a>
-    </nav>
-    <h1>Pagina principal</h1>
-    <p>Hola, mundo</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title%} Indice {% endblock %}
+
+{% block content %}
+    <table class="region_table">
+        <tr>
+            <th>Región</th>
+            <th>Total Ventas</th>
+            <th>Total Beneficio</th>
+        </tr>
+        {% for key, data in registros %}
+        <tr>
+            <td>{{key}}</td>
+            <td>{{"%.2f €" | format(data.ingresos_totales)}}</td>
+            <td>{{"%.2f €" | format(data.beneficios_totales)}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+{% endblock %}
